# stuff

./: .gitignore  ImageList.java  Makefile  a.out  adplay.js  ahttp.sh  atomsay.py  bluetest.py  budgetwatch.py  cache.cgi  chap.js  codetest.cpp  codetest.cpp~  codetest.lst  codetest.s  crash-dumps-win7-setup.bat  cyl.js  dmn.js  envmix.pd  envmixctl.pd  etags.c  functions.sh  genpmakefile.sh  git-add-progress.tcl  global.c  icqstat.js  img.html  img.js  imgindex.sh  index.html  invisVnc.reg  last.c  lqr.html  lqr.js  lslg.vbs  medical.txt  memgraph.js  mg.html  mkgif.hs  neverrun.js  (+31 more)
chap/: index.html
elisp/: .emacs  bootAwesomeness.el  compact-blame.el  ecmascript-mode.el  gtags.el  shoe.el
jsetags/: Makefile.am  Makefile.am~  Makefile.in  configure  configure.ac  configure.ac~  configure.scan  jsetags.sln  jsetags.vcproj  main.c  main.c~
kbmix/: Makefile  kbmix.c
kicqstat/: history.cpp  history.h  kicqstat.h  kicqstat.pro  kicqstat.pro~  main.cpp  main.cpp~  moc_kicqstat.cpp
last/: last.c
ltags/: Makefile  chooselang.c  complete.sh  java.c  java_res.h  js.c  ltags.c  queue.h  search.hs  storage.c  storage.h  testparse.c  tokenizer.c  tokenizer.h  util.c
observation/: breath.py  g-record  g-report
panes/: AndroidManifest.xml  build.xml  local.properties
pplot/: app.yaml  cron.yaml  data.py  index.html  pplot.py  update.py
sc/: AndroidManifest.xml  Makefile  build.xml  demo.java  local.properties  process.cpp
sd-setup/: go.sh  setup-arch.sh
subtitles/: asshole.srt  (+5 more)
tests/: Makefile.am  Makefile.in  configure  configure.ac  timetest  timetest.c
(+98 files in other folders)
