#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.


#          AC_INIT([amhello], [1.0], [bug-automake@gnu.org])
#          AM_INIT_AUTOMAKE([-Wall -Werror foreign])
#          AC_PROG_CC
#          AC_CONFIG_HEADERS([config.h])
#          AC_CONFIG_FILES([
#           Makefile
#           src/Makefile
#          ])
#          AC_OUTPUT



# AC_PREREQ(2.61)
AC_INIT([tests], [1.0], [gorsunov@gmail.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
#AC_CONFIG_SRCDIR([timetest.c])

# Checks for programs.
AC_PROG_CC

AC_CONFIG_HEADERS([config.h])


# Checks for libraries.

# Checks for header files.
#AC_HEADER_STDC
#AC_CHECK_HEADERS([stdlib.h string.h])

# Checks for typedefs, structures, and compiler characteristics.
#AC_C_CONST

# Checks for library functions.
#AC_FUNC_MALLOC
#AC_FUNC_STAT
#AC_CHECK_FUNCS([regcomp])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT

#AC_PROG_MAKE_SET

